# session5-cpp-unit-test-gen

./: COVERAGE_REPORT.md  KEPLOY_FELLOWSHIP_DEMONSTRATION.md  LLM_STATS_REPORT.md  README.md  SIMPLE_DEMO.md  SUBMISSION_CHECKLIST.md  generate_tests.py  requirements.txt  run_test_generation.py
tests/: CMakeLists.txt  llm_prompt_initial.txt  llm_prompt_refine.txt  test_AuthController.cpp  test_Department.cpp  test_DepartmentsController.cpp  test_JobsController.cpp  test_Jwt.cpp  test_JwtPlugin.cpp  test_LoginFilter.cpp  test_PersonsController.cpp  test_main.cpp  test_test_controllers.cpp  test_test_main.cpp  test_utils.cpp
yaml-prompts/: fix_build.yaml  initial_test_gen.yaml  refine_tests.yaml
